--- a/ETL_EDA.ipynb
+++ b/ETL_EDA.ipynb
@@ -56,129 +56,197 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def fetch_all_crime():\n",
-    "    db = client.get_database(\"crime\")\n",
-    "    collection = db.get_collection(\"crime\")\n",
-    "    ret = list(collection.find())\n",
-    "    logger.info(str(len(ret)) + ' documents read from the db')\n",
-    "    return ret\n",
-    "\n",
-    "\n",
-    "_fetch_all_crime_as_df_cache = expiringdict.ExpiringDict(max_len=1,\n",
-    "                                                       max_age_seconds=RESULT_CACHE_EXPIRATION)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:Requests made without an app_token will be subject to strict throttling limits.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-12-13 03:36:17,539 [fetch_all_crime]: 990 documents read from the db\n",
-      "        rpt_id  arst_date  time area    area_desc    rd  age sex_cd  \\\n",
-      "0    190819078 2019-12-01  1300   08      West LA  0817   30      M   \n",
-      "1      5812713 2019-12-02  0930   15  N Hollywood  1523   54      M   \n",
-      "2    191120321 2019-12-03  1450   11    Northeast  1105   59      M   \n",
-      "3      5814534 2019-12-04  1140   03    Southwest  0311   21      M   \n",
-      "4      5792472 2019-12-05  1700   12  77th Street  1258   46      M   \n",
-      "..         ...        ...   ...  ...          ...   ...  ...    ...   \n",
-      "985    5816831 2019-12-07  0257   14      Pacific  1401   23      M   \n",
-      "986    5816592 2019-12-07  0230   01      Central  0191   24      M   \n",
-      "987    5816959 2019-12-07  1250   01      Central  0127   23      F   \n",
-      "988    5816911 2019-12-07  0830   04   Hollenbeck  0411   45      F   \n",
-      "989    5816871 2019-12-07  0650   01      Central  0119   31      M   \n",
-      "\n",
-      "    descent_cd chrg_grp_cd          grp_description arst_typ_cd       charge  \\\n",
-      "0            O         NaN                      NaN           M    308(A)1PC   \n",
-      "1            O          04       Aggravated Assault           F  245(A)(1)PC   \n",
-      "2            W         NaN                      NaN           M        11364   \n",
-      "3            B          14   Sex (except rape/prst)           M     647(A)PC   \n",
-      "4            B          01                 Homicide           F     187(A)PC   \n",
-      "..         ...         ...                      ...         ...          ...   \n",
-      "985          H          22  Driving Under Influence           M   23152(A)VC   \n",
-      "986          H          22  Driving Under Influence           M   23152(A)VC   \n",
-      "987          H          22  Driving Under Influence           M   23152(B)VC   \n",
-      "988          W          16       Narcotic Drug Laws           F   11379(A)HS   \n",
-      "989          B          16       Narcotic Drug Laws           M   11377(A)HS   \n",
-      "\n",
-      "                                  chrg_desc  \\\n",
-      "0                                       NaN   \n",
-      "1                   ADW, NOT FIREARM, W/GBI   \n",
-      "2                                       NaN   \n",
-      "3    SOLICIT/ENGAGE LEWD ACT IN PUBLIC VIEW   \n",
-      "4    MURDER:FIRST DEGREE:SHOOT FROM VEHICLE   \n",
-      "..                                      ...   \n",
-      "985             DRUNK DRIVING ALCOHOL/DRUGS   \n",
-      "986             DRUNK DRIVING ALCOHOL/DRUGS   \n",
-      "987              DRUNK DRIVING .10 OR ABOVE   \n",
-      "988     TRANSPORT/SELL CONTROLLED SUBSTANCE   \n",
-      "989         POSSESSION CONTROLLED SUBSTANCE   \n",
-      "\n",
-      "                                    location                            crsst  \\\n",
-      "0     900    WESTWOOD                     BL                              NaN   \n",
-      "1    6300    TEESDALE                     AV                              NaN   \n",
-      "2                                   BROADWAY                           VERANO   \n",
-      "3    3200 S  LA CIENEGA                   BL                              NaN   \n",
-      "4                           7600 S  BROADWAY                              NaN   \n",
-      "..                                       ...                              ...   \n",
-      "985          CRENSHAW                     BL  SANTA MONICA                 FY   \n",
-      "986          10                           FY  MAPLE                        AV   \n",
-      "987   100 N  LOS ANGELES                  ST                              NaN   \n",
-      "988                                   AVE 18  BARRANCA                     ST   \n",
-      "989   800 N  ALAMEDA                      ST                              NaN   \n",
-      "\n",
-      "                                            location_1  \n",
-      "0    {'latitude': '34.0637', 'longitude': '-118.445...  \n",
-      "1    {'latitude': '34.1849', 'longitude': '-118.408...  \n",
-      "2    {'latitude': '34.1442', 'longitude': '-118.218...  \n",
-      "3    {'latitude': '34.0293', 'longitude': '-118.371...  \n",
-      "4    {'latitude': '33.9708', 'longitude': '-118.278...  \n",
-      "..                                                 ...  \n",
-      "985  {'latitude': '34.0247', 'longitude': '-118.445...  \n",
-      "986  {'latitude': '34.0388', 'longitude': '-118.271...  \n",
-      "987  {'latitude': '34.0515', 'longitude': '-118.242...  \n",
-      "988  {'latitude': '34.0747', 'longitude': '-118.224...  \n",
-      "989  {'latitude': '34.0563', 'longitude': '-118.237...  \n",
-      "\n",
-      "[990 rows x 17 columns]\n"
+      "2019-12-13 04:33:56,877 [upsert_crime]: rows=990, update=990, insert=0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:Requests made without an app_token will be subject to strict throttling limits.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-12-13 04:34:13,681 [upsert_crime]: rows=990, update=990, insert=0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:Requests made without an app_token will be subject to strict throttling limits.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-12-13 04:34:30,459 [upsert_crime]: rows=990, update=990, insert=0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:Requests made without an app_token will be subject to strict throttling limits.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-12-13 04:34:47,177 [upsert_crime]: rows=990, update=990, insert=0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:Requests made without an app_token will be subject to strict throttling limits.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-12-13 04:35:04,248 [upsert_crime]: rows=990, update=990, insert=0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:Requests made without an app_token will be subject to strict throttling limits.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-12-13 04:35:21,001 [upsert_crime]: rows=990, update=990, insert=0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:Requests made without an app_token will be subject to strict throttling limits.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-12-13 04:35:37,743 [upsert_crime]: rows=990, update=990, insert=0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:Requests made without an app_token will be subject to strict throttling limits.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-12-13 04:35:54,585 [upsert_crime]: rows=990, update=990, insert=0\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-24-c8c1578e0df9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     51\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'__main__'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 53\u001b[0;31m     \u001b[0mmain_loop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-24-c8c1578e0df9>\u001b[0m in \u001b[0;36mmain_loop\u001b[0;34m(timeout)\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m     \u001b[0mscheduler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_worker\u001b[0m\u001b[0;34m)\u001b[0m              \u001b[0;31m# start the first event\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 49\u001b[0;31m     \u001b[0mscheduler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mblocking\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     50\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/3.7.4/lib/python3.7/sched.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self, blocking)\u001b[0m\n\u001b[1;32m    147\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mblocking\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    148\u001b[0m                     \u001b[0;32mreturn\u001b[0m \u001b[0mtime\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mnow\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 149\u001b[0;31m                 \u001b[0mdelayfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtime\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mnow\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    150\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    151\u001b[0m                 \u001b[0maction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margument\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "def fetch_all_crime_as_df(allow_cached=False):\n",
-    "    \"\"\"Converts list of dicts returned by `fetch_all_bpa` to DataFrame with ID removed\n",
-    "    Actual job is done in `_worker`. When `allow_cached`, attempt to retrieve timed cached from\n",
-    "    `_fetch_all_bpa_as_df_cache`; ignore cache and call `_work` if cache expires or `allow_cached`\n",
-    "    is False.\n",
-    "    \"\"\"\n",
-    "    def _work():\n",
-    "        data = fetch_all_crime()\n",
-    "        if len(data) == 0:\n",
-    "            return None\n",
-    "        df = pd.DataFrame.from_records(data)\n",
-    "        df.drop('_id', axis=1, inplace=True)\n",
-    "        return df\n",
+    "import time\n",
+    "import sched\n",
+    "import pandas as pd\n",
+    "import logging\n",
+    "import utils\n",
+    "from database import upsert_crime \n",
+    "from sodapy import Socrata\n",
+    "from datetime import datetime\n",
     "\n",
-    "    if allow_cached:\n",
+    "CRIME_SOURCE = \"data.lacity.org\"\n",
+    "MAX_DOWNLOAD_ATTEMPT = 5\n",
+    "DOWNLOAD_PERIOD = 15         # second\n",
+    "logger = logging.Logger(__name__)\n",
+    "utils.setup_logger(logger, 'data.log')\n",
+    "\n",
+    "\n",
+    "def download_crime(url=CRIME_SOURCE, retries=MAX_DOWNLOAD_ATTEMPT):\n",
+    "    \"\"\"Returns records from `CRIME_SOURCE` that includes crime and arrestee information.\n",
+    "    \"\"\"\n",
+    "    client = Socrata(url, None)\n",
+    "    results = client.get(\"yru6-6re4\",where=\"arst_date > '2019-11-30T00:00:00.000'\") # wait to be confirmed\n",
+    "    return results\n",
+    "\n",
+    "def convert_crime(results):\n",
+    "    \"\"\"Converts `results` to `DataFrame`, removes empty lines and descriptions\n",
+    "    \"\"\"\n",
+    "    # use StringIO to convert string to a readable buffer\n",
+    "    df = pd.DataFrame.from_records(results)\n",
+    "    #df.dropna(inplace=True)             # drop rows with empty cells\n",
+    "    return df\n",
+    "\n",
+    "\n",
+    "def update_once():\n",
+    "    results = download_crime()\n",
+    "    df = convert_crime(results)\n",
+    "    upsert_crime(df)\n",
+    "    \n",
+    "def main_loop(timeout=DOWNLOAD_PERIOD):\n",
+    "    scheduler = sched.scheduler(time.time, time.sleep)\n",
+    "\n",
+    "    def _worker():\n",
     "        try:\n",
-    "            return _fetch_all_crime_as_df_cache['cache']\n",
-    "        except KeyError:\n",
-    "            pass\n",
-    "    ret = _work()\n",
-    "    _fetch_all_crime_as_df_cache['cache'] = ret\n",
-    "    return ret\n",
+    "            update_once()\n",
+    "        except Exception as e:\n",
+    "            logger.warning(\"main loop worker ignores exception and continues: {}\".format(e))\n",
+    "        scheduler.enter(timeout, 1, _worker)    # schedule the next event\n",
+    "\n",
+    "    scheduler.enter(0, 1, _worker)              # start the first event\n",
+    "    scheduler.run(blocking=True)\n",
     "\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    print(fetch_all_crime_as_df())"
+    "    main_loop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
