added dataset link

--- a/ETL_EDA.ipynb
+++ b/ETL_EDA.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "source": [
     "## 1. Raw Data from LAPD     \n",
-    "The dataset is a continuously updated file in csv format. It contains City of Los Angeles arrest data from 2010 to present. It can be retrieved simply by making requests without parameters. For more complicated API call, you may need to add query parameters."
+    "The [dataset](https://www.google.com) is a continuously updated file in csv format. It contains City of Los Angeles arrest data from 2010 to present. It can be retrieved simply by making requests without parameters. For more complicated API call, you may need to add query parameters."
    ]
   },
   {
