--- a/Visualization.ipynb
+++ b/Visualization.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -106,6 +106,251 @@
    "source": [
     "## 2. Visualization with Plot.ly: Line Plots (stacked / unstacked)       \n",
     "The function below creates a plotly.graph_objects with a few Scatter plots added. A figure is initialized with go.Figure(). This function works in a Notebook as well as dash app! Most of them are just line plots. If a stackgroup is provided, plotly automatically stack up a few series."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rpt_id</th>\n",
+       "      <th>arst_date</th>\n",
+       "      <th>time</th>\n",
+       "      <th>area</th>\n",
+       "      <th>area_desc</th>\n",
+       "      <th>rd</th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex_cd</th>\n",
+       "      <th>descent_cd</th>\n",
+       "      <th>chrg_grp_cd</th>\n",
+       "      <th>grp_description</th>\n",
+       "      <th>arst_typ_cd</th>\n",
+       "      <th>charge</th>\n",
+       "      <th>chrg_desc</th>\n",
+       "      <th>location</th>\n",
+       "      <th>crsst</th>\n",
+       "      <th>location_1</th>\n",
+       "      <th>hour</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5811793</td>\n",
+       "      <td>2019-12-01</td>\n",
+       "      <td>0311</td>\n",
+       "      <td>15</td>\n",
+       "      <td>N Hollywood</td>\n",
+       "      <td>1565</td>\n",
+       "      <td>26</td>\n",
+       "      <td>M</td>\n",
+       "      <td>H</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Driving Under Influence</td>\n",
+       "      <td>M</td>\n",
+       "      <td>23152(A)VC</td>\n",
+       "      <td>DRUNK DRIVING ALCOHOL/DRUGS</td>\n",
+       "      <td>VINELAND                     AV</td>\n",
+       "      <td>HOLLYWOOD                    FY</td>\n",
+       "      <td>{'latitude': '34.1468', 'longitude': '-118.370...</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5811921</td>\n",
+       "      <td>2019-12-01</td>\n",
+       "      <td>0300</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Newton</td>\n",
+       "      <td>1307</td>\n",
+       "      <td>21</td>\n",
+       "      <td>M</td>\n",
+       "      <td>B</td>\n",
+       "      <td>04</td>\n",
+       "      <td>Aggravated Assault</td>\n",
+       "      <td>F</td>\n",
+       "      <td>245(D)(1)PC</td>\n",
+       "      <td>ASSAULT W/FIREARM ON PO OR FIREMAN</td>\n",
+       "      <td>700    CROCKER                      ST</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>{'latitude': '34.0401', 'longitude': '-118.245...</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5812227</td>\n",
+       "      <td>2019-12-01</td>\n",
+       "      <td>1540</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Newton</td>\n",
+       "      <td>1362</td>\n",
+       "      <td>28</td>\n",
+       "      <td>M</td>\n",
+       "      <td>B</td>\n",
+       "      <td>05</td>\n",
+       "      <td>Burglary</td>\n",
+       "      <td>F</td>\n",
+       "      <td>459PC</td>\n",
+       "      <td>BURGLARY</td>\n",
+       "      <td>400 E  49TH                         ST</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>{'latitude': '33.9988', 'longitude': '-118.269...</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>190920652</td>\n",
+       "      <td>2019-12-01</td>\n",
+       "      <td>0225</td>\n",
+       "      <td>09</td>\n",
+       "      <td>Van Nuys</td>\n",
+       "      <td>0914</td>\n",
+       "      <td>45</td>\n",
+       "      <td>M</td>\n",
+       "      <td>H</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Prostitution/Allied</td>\n",
+       "      <td>M</td>\n",
+       "      <td>647(B)(2)PC</td>\n",
+       "      <td>ENGAGE/SOLICIT SEX FOR MONEY/ETC</td>\n",
+       "      <td>SEPULVEDA                    BL</td>\n",
+       "      <td>HART                         ST</td>\n",
+       "      <td>{'latitude': '34.1976', 'longitude': '-118.466...</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5812327</td>\n",
+       "      <td>2019-12-01</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>06</td>\n",
+       "      <td>Hollywood</td>\n",
+       "      <td>0646</td>\n",
+       "      <td>39</td>\n",
+       "      <td>M</td>\n",
+       "      <td>B</td>\n",
+       "      <td>03</td>\n",
+       "      <td>Robbery</td>\n",
+       "      <td>F</td>\n",
+       "      <td>211PC</td>\n",
+       "      <td>ROBBERY</td>\n",
+       "      <td>COSMO</td>\n",
+       "      <td>HOLLYWOOD                    BL</td>\n",
+       "      <td>{'latitude': '34.1016', 'longitude': '-118.328...</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      rpt_id  arst_date  time area    area_desc    rd  age sex_cd descent_cd  \\\n",
+       "0    5811793 2019-12-01  0311   15  N Hollywood  1565   26      M          H   \n",
+       "1    5811921 2019-12-01  0300   13       Newton  1307   21      M          B   \n",
+       "2    5812227 2019-12-01  1540   13       Newton  1362   28      M          B   \n",
+       "3  190920652 2019-12-01  0225   09     Van Nuys  0914   45      M          H   \n",
+       "4    5812327 2019-12-01  2015   06    Hollywood  0646   39      M          B   \n",
+       "\n",
+       "  chrg_grp_cd          grp_description arst_typ_cd       charge  \\\n",
+       "0          22  Driving Under Influence           M   23152(A)VC   \n",
+       "1          04       Aggravated Assault           F  245(D)(1)PC   \n",
+       "2          05                 Burglary           F        459PC   \n",
+       "3          13      Prostitution/Allied           M  647(B)(2)PC   \n",
+       "4          03                  Robbery           F        211PC   \n",
+       "\n",
+       "                            chrg_desc                                location  \\\n",
+       "0         DRUNK DRIVING ALCOHOL/DRUGS         VINELAND                     AV   \n",
+       "1  ASSAULT W/FIREARM ON PO OR FIREMAN  700    CROCKER                      ST   \n",
+       "2                            BURGLARY  400 E  49TH                         ST   \n",
+       "3    ENGAGE/SOLICIT SEX FOR MONEY/ETC         SEPULVEDA                    BL   \n",
+       "4                             ROBBERY                                   COSMO   \n",
+       "\n",
+       "                             crsst  \\\n",
+       "0  HOLLYWOOD                    FY   \n",
+       "1                              NaN   \n",
+       "2                              NaN   \n",
+       "3  HART                         ST   \n",
+       "4  HOLLYWOOD                    BL   \n",
+       "\n",
+       "                                          location_1  hour  \n",
+       "0  {'latitude': '34.1468', 'longitude': '-118.370...     3  \n",
+       "1  {'latitude': '34.0401', 'longitude': '-118.245...     3  \n",
+       "2  {'latitude': '33.9988', 'longitude': '-118.269...    15  \n",
+       "3  {'latitude': '34.1976', 'longitude': '-118.466...     2  \n",
+       "4  {'latitude': '34.1016', 'longitude': '-118.328...    20  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "df['arst_date'] = pd.to_datetime(df['arst_date'])\n",
+    "df['hour'] = df['time'].apply(lambda x: datetime.strptime(x, '%H%M').time().hour)\n",
+    "df['age'] = pd.to_numeric(df['age'])\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 990 entries, 0 to 989\n",
+      "Data columns (total 18 columns):\n",
+      "rpt_id             990 non-null object\n",
+      "arst_date          990 non-null datetime64[ns]\n",
+      "time               990 non-null object\n",
+      "area               990 non-null object\n",
+      "area_desc          990 non-null object\n",
+      "rd                 990 non-null object\n",
+      "age                990 non-null int64\n",
+      "sex_cd             990 non-null object\n",
+      "descent_cd         990 non-null object\n",
+      "chrg_grp_cd        930 non-null object\n",
+      "grp_description    930 non-null object\n",
+      "arst_typ_cd        990 non-null object\n",
+      "charge             990 non-null object\n",
+      "chrg_desc          937 non-null object\n",
+      "location           990 non-null object\n",
+      "crsst              485 non-null object\n",
+      "location_1         990 non-null object\n",
+      "hour               990 non-null int64\n",
+      "dtypes: datetime64[ns](1), int64(2), object(15)\n",
+      "memory usage: 139.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
    ]
   },
   {
