get data for a year

--- a/ETL_EDA.ipynb
+++ b/ETL_EDA.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'rpt_id': '191919936', 'arst_date': '2019-11-02T00:00:00.000', 'time': '1605', 'area': '19', 'area_desc': 'Mission', 'rd': '1972', 'age': '62', 'sex_cd': 'M', 'descent_cd': 'W', 'chrg_grp_cd': '06', 'grp_description': 'Larceny', 'arst_typ_cd': 'M', 'charge': '490.1PC', 'chrg_desc': 'PETTY THEFT UNDER $50.00', 'location': '9000    SEPULVEDA                    BL', 'location_1': {'latitude': '34.2337', 'longitude': '-118.4676', 'human_address': '{\"address\": \"\", \"city\": \"\", \"state\": \"\", \"zip\": \"\"}'}}, {'rpt_id': '5789339', 'arst_date': '2019-11-02T00:00:00.000', 'time': '2300', 'area': '18', 'area_desc': 'Southeast', 'rd': '1842', 'age': '18', 'sex_cd': 'M', 'descent_cd': 'B', 'chrg_grp_cd': '12', 'grp_description': 'Weapon (carry/poss)', 'arst_typ_cd': 'F', 'charge': '25850(A)PC', 'chrg_desc': 'CARRY LOADED F/ARM PRSON/HEH PUBLIC PLACE', 'location': '400 W  111TH                        ST', 'location_1': {'latitude': '33.9348', 'longitude': '-118.2811', 'human_address': '{\"address\": \"\", \"city\": \"\", \"state\": \"\", \"zip\": \"\"}'}}]\n",
+      "[{'rpt_id': '5486720', 'arst_date': '2018-12-02T00:00:00.000', 'time': '1630', 'area': '12', 'area_desc': '77th Street', 'rd': '1259', 'age': '27', 'sex_cd': 'M', 'descent_cd': 'H', 'chrg_grp_cd': '04', 'grp_description': 'Aggravated Assault', 'arst_typ_cd': 'F', 'charge': '273.5(A)PC', 'chrg_desc': 'CORPORAL INJURY ON SPOUSE/COHABITANT/ETC', 'location': '300 E  74TH                         ST', 'location_1': {'latitude': '33.973', 'longitude': '-118.2695', 'human_address': '{\"address\": \"\", \"city\": \"\", \"state\": \"\", \"zip\": \"\"}'}}, {'rpt_id': '5486572', 'arst_date': '2018-12-02T00:00:00.000', 'time': '0645', 'area': '13', 'area_desc': 'Newton', 'rd': '1391', 'age': '59', 'sex_cd': 'M', 'descent_cd': 'H', 'chrg_grp_cd': '14', 'grp_description': 'Sex (except rape/prst)', 'arst_typ_cd': 'M', 'charge': '647(A)PC', 'chrg_desc': 'SOLICIT/ENGAGE LEWD ACT IN PUBLIC VIEW', 'location': '69TH', 'crsst': 'GRAND', 'location_1': {'latitude': '33.9774', 'longitude': '-118.2803', 'human_address': '{\"address\": \"\", \"city\": \"\", \"state\": \"\", \"zip\": \"\"}'}}]\n",
       "...\n",
       "[{'rpt_id': '5816871', 'arst_date': '2019-12-07T00:00:00.000', 'time': '0650', 'area': '01', 'area_desc': 'Central', 'rd': '0119', 'age': '31', 'sex_cd': 'M', 'descent_cd': 'B', 'chrg_grp_cd': '16', 'grp_description': 'Narcotic Drug Laws', 'arst_typ_cd': 'M', 'charge': '11377(A)HS', 'chrg_desc': 'POSSESSION CONTROLLED SUBSTANCE', 'location': '800 N  ALAMEDA                      ST', 'location_1': {'latitude': '34.0563', 'longitude': '-118.2374', 'human_address': '{\"address\": \"\", \"city\": \"\", \"state\": \"\", \"zip\": \"\"}'}}, {'rpt_id': '5816829', 'arst_date': '2019-12-07T00:00:00.000', 'time': '0354', 'area': '01', 'area_desc': 'Central', 'rd': '0135', 'age': '55', 'sex_cd': 'F', 'descent_cd': 'B', 'chrg_grp_cd': '22', 'grp_description': 'Driving Under Influence', 'arst_typ_cd': 'M', 'charge': '23152(A)VC', 'chrg_desc': 'DRUNK DRIVING ALCOHOL/DRUGS', 'location': '10                           FY', 'crsst': '51ST                         ST', 'location_1': {'latitude': '34.0495', 'longitude': '-118.2458', 'human_address': '{\"address\": \"\", \"city\": \"\", \"state\": \"\", \"zip\": \"\"}'}}]\n"
      ]
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -104,157 +104,158 @@
        "      <th>location</th>\n",
        "      <th>location_1</th>\n",
        "      <th>crsst</th>\n",
-       "      <th>hour</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>191919936</td>\n",
-       "      <td>2019-11-02</td>\n",
-       "      <td>1605</td>\n",
-       "      <td>19</td>\n",
-       "      <td>Mission</td>\n",
-       "      <td>1972</td>\n",
-       "      <td>62</td>\n",
+       "      <td>5486720</td>\n",
+       "      <td>2018-12-02</td>\n",
+       "      <td>1630</td>\n",
+       "      <td>12</td>\n",
+       "      <td>77th Street</td>\n",
+       "      <td>1259</td>\n",
+       "      <td>27</td>\n",
        "      <td>M</td>\n",
-       "      <td>W</td>\n",
-       "      <td>06</td>\n",
-       "      <td>Larceny</td>\n",
-       "      <td>M</td>\n",
-       "      <td>490.1PC</td>\n",
-       "      <td>PETTY THEFT UNDER $50.00</td>\n",
-       "      <td>9000    SEPULVEDA                    BL</td>\n",
-       "      <td>{'latitude': '34.2337', 'longitude': '-118.467...</td>\n",
+       "      <td>H</td>\n",
+       "      <td>04</td>\n",
+       "      <td>Aggravated Assault</td>\n",
+       "      <td>F</td>\n",
+       "      <td>273.5(A)PC</td>\n",
+       "      <td>CORPORAL INJURY ON SPOUSE/COHABITANT/ETC</td>\n",
+       "      <td>300 E  74TH                         ST</td>\n",
+       "      <td>{'latitude': '33.973', 'longitude': '-118.2695...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5789339</td>\n",
-       "      <td>2019-11-02</td>\n",
-       "      <td>2300</td>\n",
+       "      <td>5486572</td>\n",
+       "      <td>2018-12-02</td>\n",
+       "      <td>0645</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Newton</td>\n",
+       "      <td>1391</td>\n",
+       "      <td>59</td>\n",
+       "      <td>M</td>\n",
+       "      <td>H</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Sex (except rape/prst)</td>\n",
+       "      <td>M</td>\n",
+       "      <td>647(A)PC</td>\n",
+       "      <td>SOLICIT/ENGAGE LEWD ACT IN PUBLIC VIEW</td>\n",
+       "      <td>69TH</td>\n",
+       "      <td>{'latitude': '33.9774', 'longitude': '-118.280...</td>\n",
+       "      <td>GRAND</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5486874</td>\n",
+       "      <td>2018-12-02</td>\n",
+       "      <td>2324</td>\n",
+       "      <td>08</td>\n",
+       "      <td>West LA</td>\n",
+       "      <td>0814</td>\n",
+       "      <td>53</td>\n",
+       "      <td>M</td>\n",
+       "      <td>H</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Driving Under Influence</td>\n",
+       "      <td>M</td>\n",
+       "      <td>23152(A)VC</td>\n",
+       "      <td>DRUNK DRIVING ALCOHOL/DRUGS</td>\n",
+       "      <td>SAN DIEGO                    FY</td>\n",
+       "      <td>{'latitude': '34.0728', 'longitude': '-118.466...</td>\n",
+       "      <td>SUNSET                       BL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5486747</td>\n",
+       "      <td>2018-12-02</td>\n",
+       "      <td>1820</td>\n",
        "      <td>18</td>\n",
        "      <td>Southeast</td>\n",
-       "      <td>1842</td>\n",
-       "      <td>18</td>\n",
+       "      <td>1844</td>\n",
+       "      <td>53</td>\n",
+       "      <td>M</td>\n",
+       "      <td>B</td>\n",
+       "      <td>05</td>\n",
+       "      <td>Burglary</td>\n",
+       "      <td>F</td>\n",
+       "      <td>459PC</td>\n",
+       "      <td>BURGLARY</td>\n",
+       "      <td>400 E  LANZIT                       AV</td>\n",
+       "      <td>{'latitude': '33.9314', 'longitude': '-118.267...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5486478</td>\n",
+       "      <td>2018-12-02</td>\n",
+       "      <td>0445</td>\n",
+       "      <td>12</td>\n",
+       "      <td>77th Street</td>\n",
+       "      <td>1273</td>\n",
+       "      <td>32</td>\n",
        "      <td>M</td>\n",
        "      <td>B</td>\n",
        "      <td>12</td>\n",
        "      <td>Weapon (carry/poss)</td>\n",
        "      <td>F</td>\n",
-       "      <td>25850(A)PC</td>\n",
-       "      <td>CARRY LOADED F/ARM PRSON/HEH PUBLIC PLACE</td>\n",
-       "      <td>400 W  111TH                        ST</td>\n",
-       "      <td>{'latitude': '33.9348', 'longitude': '-118.281...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>5789301</td>\n",
-       "      <td>2019-11-02</td>\n",
-       "      <td>2125</td>\n",
-       "      <td>18</td>\n",
-       "      <td>Southeast</td>\n",
-       "      <td>1823</td>\n",
-       "      <td>28</td>\n",
-       "      <td>M</td>\n",
-       "      <td>H</td>\n",
-       "      <td>24</td>\n",
-       "      <td>Miscellaneous Other Violations</td>\n",
-       "      <td>F</td>\n",
-       "      <td>236PC</td>\n",
-       "      <td>FALSE IMPRISONMENT</td>\n",
-       "      <td>400 E  93RD                         ST</td>\n",
-       "      <td>{'latitude': '33.952', 'longitude': '-118.2673...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5789240</td>\n",
-       "      <td>2019-11-02</td>\n",
-       "      <td>1400</td>\n",
-       "      <td>03</td>\n",
-       "      <td>Southwest</td>\n",
-       "      <td>0357</td>\n",
-       "      <td>52</td>\n",
-       "      <td>M</td>\n",
-       "      <td>B</td>\n",
-       "      <td>08</td>\n",
-       "      <td>Other Assaults</td>\n",
-       "      <td>F</td>\n",
-       "      <td>243(C)(2)PC</td>\n",
-       "      <td>BATTERY ON PEACE OFFICER</td>\n",
-       "      <td>1100    EXPOSITION                   BL</td>\n",
-       "      <td>{'latitude': '34.0219', 'longitude': '-118.295...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5789096</td>\n",
-       "      <td>2019-11-02</td>\n",
-       "      <td>1500</td>\n",
-       "      <td>21</td>\n",
-       "      <td>Topanga</td>\n",
-       "      <td>2126</td>\n",
-       "      <td>19</td>\n",
-       "      <td>M</td>\n",
-       "      <td>W</td>\n",
-       "      <td>08</td>\n",
-       "      <td>Other Assaults</td>\n",
-       "      <td>F</td>\n",
-       "      <td>422(A)PC</td>\n",
-       "      <td>TERRORIZE CAUSING FEAR</td>\n",
-       "      <td>7800    DE SOTO                      AV</td>\n",
-       "      <td>{'latitude': '34.212', 'longitude': '-118.5885...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>15</td>\n",
+       "      <td>29800(A)1PC</td>\n",
+       "      <td>POSS F/ARM BY CONVICTED FELON/ADDICT/ETC</td>\n",
+       "      <td>MANCHESTER                   AV</td>\n",
+       "      <td>{'latitude': '33.96', 'longitude': '-118.309',...</td>\n",
+       "      <td>WESTERN                      AV</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      rpt_id  arst_date  time area  area_desc    rd  age sex_cd descent_cd  \\\n",
-       "0  191919936 2019-11-02  1605   19    Mission  1972   62      M          W   \n",
-       "1    5789339 2019-11-02  2300   18  Southeast  1842   18      M          B   \n",
-       "2    5789301 2019-11-02  2125   18  Southeast  1823   28      M          H   \n",
-       "3    5789240 2019-11-02  1400   03  Southwest  0357   52      M          B   \n",
-       "4    5789096 2019-11-02  1500   21    Topanga  2126   19      M          W   \n",
+       "    rpt_id  arst_date  time area    area_desc    rd  age sex_cd descent_cd  \\\n",
+       "0  5486720 2018-12-02  1630   12  77th Street  1259   27      M          H   \n",
+       "1  5486572 2018-12-02  0645   13       Newton  1391   59      M          H   \n",
+       "2  5486874 2018-12-02  2324   08      West LA  0814   53      M          H   \n",
+       "3  5486747 2018-12-02  1820   18    Southeast  1844   53      M          B   \n",
+       "4  5486478 2018-12-02  0445   12  77th Street  1273   32      M          B   \n",
        "\n",
-       "  chrg_grp_cd                 grp_description arst_typ_cd       charge  \\\n",
-       "0          06                         Larceny           M      490.1PC   \n",
-       "1          12             Weapon (carry/poss)           F   25850(A)PC   \n",
-       "2          24  Miscellaneous Other Violations           F        236PC   \n",
-       "3          08                  Other Assaults           F  243(C)(2)PC   \n",
-       "4          08                  Other Assaults           F     422(A)PC   \n",
+       "  chrg_grp_cd          grp_description arst_typ_cd       charge  \\\n",
+       "0          04       Aggravated Assault           F   273.5(A)PC   \n",
+       "1          14   Sex (except rape/prst)           M     647(A)PC   \n",
+       "2          22  Driving Under Influence           M   23152(A)VC   \n",
+       "3          05                 Burglary           F        459PC   \n",
+       "4          12      Weapon (carry/poss)           F  29800(A)1PC   \n",
        "\n",
-       "                                   chrg_desc  \\\n",
-       "0                   PETTY THEFT UNDER $50.00   \n",
-       "1  CARRY LOADED F/ARM PRSON/HEH PUBLIC PLACE   \n",
-       "2                         FALSE IMPRISONMENT   \n",
-       "3                   BATTERY ON PEACE OFFICER   \n",
-       "4                     TERRORIZE CAUSING FEAR   \n",
+       "                                  chrg_desc  \\\n",
+       "0  CORPORAL INJURY ON SPOUSE/COHABITANT/ETC   \n",
+       "1    SOLICIT/ENGAGE LEWD ACT IN PUBLIC VIEW   \n",
+       "2               DRUNK DRIVING ALCOHOL/DRUGS   \n",
+       "3                                  BURGLARY   \n",
+       "4  POSS F/ARM BY CONVICTED FELON/ADDICT/ETC   \n",
        "\n",
-       "                                  location  \\\n",
-       "0  9000    SEPULVEDA                    BL   \n",
-       "1   400 W  111TH                        ST   \n",
-       "2   400 E  93RD                         ST   \n",
-       "3  1100    EXPOSITION                   BL   \n",
-       "4  7800    DE SOTO                      AV   \n",
+       "                                 location  \\\n",
+       "0  300 E  74TH                         ST   \n",
+       "1                                    69TH   \n",
+       "2         SAN DIEGO                    FY   \n",
+       "3  400 E  LANZIT                       AV   \n",
+       "4         MANCHESTER                   AV   \n",
        "\n",
-       "                                          location_1 crsst  hour  \n",
-       "0  {'latitude': '34.2337', 'longitude': '-118.467...   NaN    16  \n",
-       "1  {'latitude': '33.9348', 'longitude': '-118.281...   NaN    23  \n",
-       "2  {'latitude': '33.952', 'longitude': '-118.2673...   NaN    21  \n",
-       "3  {'latitude': '34.0219', 'longitude': '-118.295...   NaN    14  \n",
-       "4  {'latitude': '34.212', 'longitude': '-118.5885...   NaN    15  "
+       "                                          location_1  \\\n",
+       "0  {'latitude': '33.973', 'longitude': '-118.2695...   \n",
+       "1  {'latitude': '33.9774', 'longitude': '-118.280...   \n",
+       "2  {'latitude': '34.0728', 'longitude': '-118.466...   \n",
+       "3  {'latitude': '33.9314', 'longitude': '-118.267...   \n",
+       "4  {'latitude': '33.96', 'longitude': '-118.309',...   \n",
+       "\n",
+       "                             crsst  \n",
+       "0                              NaN  \n",
+       "1                            GRAND  \n",
+       "2  SUNSET                       BL  \n",
+       "3                              NaN  \n",
+       "4  WESTERN                      AV  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +265,8 @@
     "\n",
     "df = pd.DataFrame.from_records(results)\n",
     "df['arst_date'] = pd.to_datetime(df['arst_date'])\n",
-    "df['hour'] = df['time'].apply(lambda x: datetime.strptime(x, '%H%M').time().hour)\n",
+    "# df['hour'] = df['time'].apply(lambda x: datetime.strptime(x, '%H%M').time().hour)\n",
+    "df['month'] = df['arst_date'].apply(lambda x: datetime.strptime(x, '%Y%m').time())\n",
     "df['age'] = pd.to_numeric(df['age'])\n",
     "\n",
     "df.head()"
@@ -280,20 +282,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rows=7349, update=7349, insert=0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pymongo\n",
-    "client = pymongo.MongoClient()\n",
+    "client = pymongo.MongoClient()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "db = client.get_database(\"crime\")\n",
     "collection = db.get_collection(\"crime\")\n",
     "update_count = 0\n",
