--- a/Visualization.ipynb
+++ b/Visualization.ipynb
@@ -316,7 +316,7 @@
    "source": [
     "from datetime import datetime\n",
     "df['datetime'] = pd.to_datetime(df['arst_date'])\n",
-    "#df.drop(columns=['arst_date'], axis=1, inplace=True)\n",
+    "df.drop(columns=['arst_date'], axis=1, inplace=True)\n",
     "df['hour'] = df['time'].apply(lambda x: datetime.strptime(x, '%H%M').time().hour)\n",
     "df['age'] = pd.to_numeric(df['age'])\n",
     "df.head()"
