--- a/ETL_EDA.ipynb
+++ b/ETL_EDA.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
        "4  WESTERN                      AV  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,9 +266,8 @@
     "df = pd.DataFrame.from_records(results)\n",
     "df['arst_date'] = pd.to_datetime(df['arst_date'])\n",
     "# df['hour'] = df['time'].apply(lambda x: datetime.strptime(x, '%H%M').time().hour)\n",
-    "df['month'] = df['arst_date'].apply(lambda x: datetime.strptime(x, '%Y%m').time())\n",
+    "#df['month'] = df['arst_date'].apply(lambda x: datetime.strptime(x, '%Y%m').time())\n",
     "df['age'] = pd.to_numeric(df['age'])\n",
-    "\n",
     "df.head()"
    ]
   },
@@ -282,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
