--- a/Visualization.ipynb
+++ b/Visualization.ipynb
@@ -808,7 +808,7 @@
     "                      plot_bgcolor='#23272c',\n",
     "                      paper_bgcolor='#23272c',\n",
     "                      yaxis_title='Number of Crimes',\n",
-    "                      xaxis_title='Charge Group')\n",
+    "                      xaxis_title='Month')\n",
     "    return fig"
    ]
   },
@@ -849,6 +849,37 @@
     "                      yaxis_title='Number of Crimes',\n",
     "                      xaxis_title='Charge Group')\n",
     "    return fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        2018-12\n",
+       "1        2018-12\n",
+       "2        2018-12\n",
+       "3        2018-12\n",
+       "4        2018-12\n",
+       "          ...   \n",
+       "68250     2019-8\n",
+       "68251     2019-8\n",
+       "68255     2019-8\n",
+       "68256     2019-8\n",
+       "68257     2019-8\n",
+       "Name: month, Length: 61102, dtype: object"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['month']"
    ]
   },
   {
