--- a/ETL_EDA.ipynb
+++ b/ETL_EDA.ipynb
@@ -63,6 +63,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "import pandas as pd\n",
+    "from sodapy import Socrata\n",
+    "import utils\n",
+    "CRIME_SOURCE = \"data.lacity.org\"\n",
+    "DOWNLOAD_PERIOD = 15         # second\n",
+    "logger = logging.Logger(__name__)\n",
+    "utils.setup_logger(logger, 'data.log')\n",
+    "\n",
+    "\n",
+    "def download_crime(url=CRIME_SOURCE, start_date = '2019-12-08T00:00:00.000'):\n",
+    "    \"\"\"Returns records from `CRIME_SOURCE` that includes crime and arrestee information.\n",
+    "    \"\"\"\n",
+    "    client = Socrata(url, None)\n",
+    "    results = client.get(\"yru6-6re4\",where=f\"arst_date >= '{start_date}'\", limit = 10000) # wait to be confirmed\n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [
